--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@ body {
   font-family: 'Crimson Text', 'Georgia', serif;
   color: black;
   background-color: none;
+  font-variant-numeric: oldstyle-nums;
 }
 
-a {
-  color: #4FB69F;
-  text-decoration: none;
-}
+
+
+a {}
 
 h1 {
   font-size: 2.5em;
