--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,10 @@ body {
   font-variant-numeric: oldstyle-nums;
 }
 
-
-
 a {}
 
 h1 {
-  font-size: 2.5em;
-  
+  font-size: 2.5em;  
 }
 
 h2 {
@@ -64,10 +61,12 @@ h2 {
 .body_of_recipe {
   font-size: 1.2em;
   font-weight: 400;
-
 }
 
-
+.number {
+  font-family: 'Georgia', 'Crimson Text', serif; 
+  font-size: 0.8em;
+}
 
 
 
