changed font of recipe title

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 .recipe_title {
-  font-family: Impact, Charcoal, sans-serif;
+  font-family: 'Oswald', Impact, Charcoal, sans-serif;
   letter-spacing: 1.5px;
   font-size: 1.3em;
   text-transform: uppercase;
