--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,21 @@ body {
 .matrix {
   margin-top: 24px;
 
-  transition: opacity 0.2s;
-  -webkit-transition: opacity 0.2s;
+/*  transition: opacity 0.2s;
+  -webkit-transition: opacity 0.2s;*/
 }
 
 .fade {
-  opacity:0.8;
-  transition: opacity 0.3s;
-  -webkit-transition: opacity 0.3s;
+  opacity:0.3;
+/*  transition: opacity 0.2s ease;
+  -webkit-transition: opacity 0.2s ease;*/
+}
+
+.changer {
+  transition: opacity 0.2s ease-in;
+  -webkit-transition: opacity 0.2s ease-in;
+  transition: opacity 0.3s ease-out;
+  -webkit-transition: opacity 0.3s ease-out;
 }
 
 .title,
