--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ img {
 /*RECIPE*/
 
 .hidden {
-  /*display: none;*/
+  display: none;
 }
 
 .column {
@@ -99,8 +99,17 @@ img {
 
 .recipe {
   width: 100%;
+  height: 100%;
+  padding: 0 20%;
   position: absolute;
-  opacity: 0.4;
+  opacity: 0.97;
+  background-color: #fff;
+  right: -10%;
+}
+
+.ex {
+  position: absolute;
+  right: 12%;  
 }
 
 
