on-click selection sort of working

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ body {
   margin-top: 24px;
 }
 
+/*whole grid matrix fade effect*/
+
 .matrix:hover > .fade {
   opacity:0.3;
 }
@@ -42,6 +44,43 @@ body {
 .matrix:hover > .fade:hover {
   opacity:1.0;
 }
+
+/*fade on liquor click effect*/
+
+.ginselect ~ .fade {
+  opacity:0.3;
+}
+
+.ginselect ~ .gin {
+  opacity:1.0 !important;
+}
+
+.whiskyselect ~ .fade {
+  opacity:0.3;
+}
+
+.whiskyselect ~ .whisky {
+  opacity:1.0 !important;
+}
+
+.rumselect ~ .fade {
+  opacity:0.3;
+}
+
+.rumselect ~ .rum {
+  opacity:1.0 !important;
+}
+
+.brandyselect ~ .fade {
+  opacity:0.3;
+}
+
+.brandyselect ~ .brandy {
+  opacity:1.0 !important;
+}
+
+
+/*fade on liquor hover effect*/
 
 .ginchooser:hover ~ .gin {
   opacity:1.0;
