--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,18 @@ img {
   margin-top: 1%;
 }
 
+.heading {
+  position: fixed;
+  top: 0;
+  width: 80%;
+  clear: both;
+}
+
+.heading h3 {
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .nav,
 .box {
   display: inline-block;
