--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ img {
 .nav p {
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Oswald', 'Kockout', sans-serif;
+  font-family: 'Oswald', 'Knockout', sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
   position: fixed;
