--- a/css/style.css
+++ b/css/style.css
@@ -7,76 +7,18 @@ body {
     font-family: 'Crimson Text', 'Georgia', serif;
 }
 
-/*.quote {
-  border-bottom: 6px solid #000;
-  padding-bottom: 6px;
-}
-
-.quote_body {
-
-  font-size: 1.8em;
-  line-height: 1.2em;
-  font-family: 'Crimson Text', 'Georgia', serif;
-  color: #000;
-  text-indent: -0.3em;
-  font-weight:400;
-}
-
-.author {
-  font-size:1.25em;
-  font-weight:600;
-  text-transform: uppercase;
-  letter-spacing: 0.13em;
-  margin-bottom: 28px;
-  text-align: right;
-}*/
-
 .matrix {
-  margin-top: 24px;
+  margin-top: 34px;
 }
-
-/*whole grid matrix fade effect*/
-
-/*.matrix:hover > .fade {
-  opacity:0.3;
-}
-
-.matrix:hover > .fade:hover {
-  opacity:1.0;
-}*/
 
 /*fade on liquor hover effect*/
 
-.ginchooser:hover ~ .fade {
+.fade {
   opacity:0.3;
 }
 
-.ginchooser:hover ~ .gin {
-  opacity:1.0;
-}
-
-.whiskychooser:hover ~ .fade {
-  opacity:0.3;
-}
-
-.whiskychooser:hover ~ .whisky {
-  opacity:1.0;
-}
-
-.rumchooser:hover ~ .fade {
-  opacity:0.3;
-}
-
-.rumchooser:hover ~ .rum {
-  opacity:1.0;
-}
-
-.brandychooser:hover ~ .fade {
-  opacity:0.3;
-}
-
-.brandychooser:hover ~ .brandy {
-  opacity:1.0;
+.unfade {
+  opacity:1.0 !important;
 }
 
 .changer {
@@ -217,9 +159,6 @@ img {
   padding-top: 0.2em;
 }
 
-.cocktail_pic {
-  /*margin: 25px 0 0 80px;*/
-}
 
 .body_of_recipe {
   font-size: 1.2em;
