--- a/css/style.css
+++ b/css/style.css
@@ -69,32 +69,26 @@ img {
 .nav,
 .box {
   display: inline-block;
-  width: 23%;
+  width: 24.5%;
 }
 
 .nav p {
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Oswald', 'Knockout', sans-serif;
+  font-family: 'Oswald', Impact, sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
   position: fixed;
-  width: 23%;
+  width: 20%;
   top: 0;
   border-bottom: 2px solid #000;
   padding: 1em 0 1em 0;
   background-color: #fff;
   -webkit-margin-before: 0;
-  opacity: 1.0 !important;
-}
-
-.nav {
-  opacity: 1.0 !important;
 }
 
 .box {
   border-right: 1px solid #95a5a6;
-  /*padding: 16px;*/
   margin: 10px 0;
 }
 
@@ -142,7 +136,7 @@ img {
 }
 
 .recipe_title {
-  font-family: 'Oswald', Impact, Charcoal, sans-serif;
+  font-family: 'Oswald', Impact, sans-serif;
   letter-spacing: 1.5px;
   font-size: 1.3em;
   text-transform: uppercase;
