--- a/css/style.css
+++ b/css/style.css
@@ -113,22 +113,22 @@ img {
 .recipe {
   width: 100%;
   height: 100%;
-  padding: 0 20%;
+  padding: 0.8% 20% 30% 20%;
   position: absolute;
-  opacity: 0.97;
   background-color: #fff;
   right: -10%;
 }
 
 .ex {
   position: absolute;
-  right: 12%;  
+  right: 10.2%;  
 }
 
 
 .cocktail_pic {
   display: inline-block;
-  width: 55%;
+  width: 49%;
+  margin-left: 12%;
 }
 
 .full_recipe {
