--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ img {
   width: 20.2%;
   top: 24%;
   border-bottom: 2px solid #000;
+  border-top: 2px solid #000;
   padding: 1em 0 1em 0;
   background-color: #fff;
   -webkit-margin-before: 0;
@@ -85,7 +86,7 @@ img {
   padding: 1% 0 0.1% 0;
   top: 0%;
   z-index: 1;
-  border-bottom: 2px solid #000;
+  /*border-bottom: 2px solid #000;*/
 }
 
 .heading h3 {
