--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .matrix {
-  margin-top: 22.6%;
+  margin-top: 210px;
 }
 
 /*fade on liquor hover effect*/
@@ -69,7 +69,7 @@ img {
   letter-spacing: 1px;
   position: fixed;
   width: 20.2%;
-  top: 24%;
+  top: 23%;
   border-bottom: 2px solid #000;
   border-top: 2px solid #000;
   padding: 1em 0 1em 0;
